--- a/static/css/main.css
+++ b/static/css/main.css
@@ -72,7 +72,7 @@ footer{
 	background: rgb(255, 255, 255);
 	border: 1px solid rgb(0, 0, 0);
 	padding: 20px;
-	text-align: justify;
+	text-align: left;
 	margin-left: 10px;
 	margin-right: 19px;
 	margin-top: 20px;
